--- a/CarChronicles/home.css
+++ b/CarChronicles/home.css
@@ -1,39 +1,76 @@
 *{
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: 300;
-    font-style: italic;
-    align-items: center;
+    text-decoration: none;
 }
 body{
-    padding: auto;
     background-color: antiquewhite;
     background-position: 0%;
-    
+    height: 100vh;
+    padding: 0.2rem;
 }
 .header{
-    box-sizing: content-box;
-    border-radius: 5px;
-    width: 100%;
-    height: 100vh;
-    background-position-x: 5px;
-    background-position-y: 10px;
-    padding-left: 15px;
-    padding-top: 10px;
+    border: 1px solid rgb(220, 129, 10);
     border-radius: 3px;
-    border-color: ;
+    align-items:inherit;
 }
 
-nav{
-    padding: 10px;
-    font-weight: 500;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-
-}
-a{
-    margin-left: 10px;
-    text-align: right;
+.header-container{
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+    align-items: center;
+    max-width: 1000px;
     color: black;
+    padding: 1rem;
+}
+.logo{
+    display: flex;
+    align-items: center;
+}
+.navbar{
+    display: none;
+    gap: 1rem;
+}
+@media screen and (min-width:760px) {
+    .navbar{
+        display: flex;
+    }
+}
+.nav-link{
+    color: black;
+    font-size: 1rem;
+    font-weight: 700;
+    transform:scale(0.2) 0.1s;
+}
+.nav-link:hover{
+    color: rgb(243, 188, 116);
+}
+.search{
+    display: none;
+    border-radius: 0.2rem;
+    max-width: 100px;
+    background: local;
+}
+@media screen and (min-width:760px) {
+    .search{
+        display: block;
+    }
+}
+.search:hover{
+    background-color: rgb(232, 192, 142);
+    border: black;
+    background-origin: padding-box;
+    border-radius: 0.375rem;
+    transform: all 0.1s;
+    padding: 0.3rem  0.2rem;
+}
+.menu{
+    display: none;
+}
+@media screen and (max-width:760px) {
+    .menu{
+        display: flex;
+    }
 }
