--- a/CarChronicles/home.css
+++ b/CarChronicles/home.css
@@ -5,7 +5,7 @@
     text-decoration: none;
 }
 body{
-    background-color: antiquewhite;
+    background-color: rgb(190, 59, 36);
     background-position: 0%;
     height: 100vh;
     padding: 0.2rem;
@@ -14,6 +14,7 @@ body{
     border: 1px solid rgb(220, 129, 10);
     border-radius: 3px;
     align-items:inherit;
+    position:relative;
 }
 
 .header-container{
@@ -24,6 +25,10 @@ body{
     max-width: 1000px;
     color: black;
     padding: 1rem;
+}
+.header-container img:hover{
+    size: 15%;
+    rotate: 2deg;
 }
 .logo{
     display: flex;
@@ -51,7 +56,7 @@ body{
     display: none;
     border-radius: 0.2rem;
     max-width: 100px;
-    background: local;
+    background-color: aliceblue;
 }
 @media screen and (min-width:760px) {
     .search{
@@ -74,3 +79,34 @@ body{
         display: flex;
     }
 }
+
+.welcome{
+    display: flex;
+    display-direction: row;
+    justify-content: space-between;
+    font-weight: 600;
+    max-width: 600px;
+    max-height: 800px;
+    margin: 20px;
+    padding: 5px 10px;
+    border: 2px solid rgb(225, 145, 145);
+    border-radius: 5px;
+    gap: 25px;
+    background-image: background-color: #FFFFFF;
+    background-image: linear-gradient(180deg, #FFFFFF 0%, #6284FF 50%, #FF0000 100%);        
+}
+
+.welcome h1{
+    font-weight: bolder;
+    font-size: large;
+    padding: 20px;
+}
+ .welcome h4{
+    font-weight: 500;
+    font-size: medium;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+ }
+ .welcome img{
+    display: flex;
+    
+ }
